chore: Add basic tests (#11)
* chore: Add basic tests

Add productionMode test.
Add developmentMode test.
Add test for reusable theme.

part of #4